# last30days

./: .gitignore  index.html  pyproject.toml  site.css
.github/workflows/: publish.yml
config/watchlists/: topics.json
docs/superpowers/plans/: 2026-03-30-ai-news-site-mvp.md
docs/superpowers/specs/: 2026-03-30-ai-news-site-design.md
src/ai_news_site/: cli.py  config.py  discovery.py  editorial.py  models.py  pipeline.py  publish_gate.py  published_store.py  research_client.py  site_builder.py  topic_router.py
src/ai_news_site/static/: site.css
src/ai_news_site/templates/: base.html  detail.html  index.html  topic.html
tests/: test_config.py  test_discovery.py  test_editorial.py  test_pipeline.py  test_publish_gate.py  test_published_store.py  test_site_builder.py  test_smoke.py
