[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-news-site"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["jinja2>=3.1.4"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
ai-news-site = "ai_news_site.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
